fill out README and make a better plugin playground